@@ -35,6 +35,6 @@
 <li><a href="tutorial-index.html">Index</a></li>
 </ul>
 <hr /><address><a target="_top" class="address"
-    href="http://GBBopen.org/"><p>The GBBopen Project</a>,<nobr>&nbsp;March 14, 2011</nobr>
-<nobr>11:41&nbsp;EDT</nobr></address><br />
+    href="http://GBBopen.org/"><p>The GBBopen Project</a>,<nobr>&nbsp;March 21, 2011</nobr>
+<nobr>4:14&nbsp;EDT</nobr></address><br />
 </body></html>
